Updated swagger and endpoints
